# kaichat-addons

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml
po/ar/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/ca/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/ca@valencia/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/de/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/es/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/eu/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/fr/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/ga/: kaichat-weather-tool-plugin.po
po/he/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/it/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/ka/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/lt/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/nl/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/nn/: kaichat-wikipedia-tool-plugin.po
po/pl/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/pt_BR/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/sk/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/sl/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/tr/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/uk/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/zh_CN/: kaichat-weather-tool-plugin.po  kaichat-wikipedia-tool-plugin.po
po/zh_TW/: kaichat-weather-tool-plugin.po
weather/: CMakeLists.txt  Messages.sh  textautogeneratetext_weatherplugin.json  weathertoolplugin.cpp  weathertoolplugin.h  weathertoolplugindialog.cpp  weathertoolplugindialog.h  weathertoolpluginjob.cpp  weathertoolpluginjob.h  weathertoolpluginutils.cpp  weathertoolpluginutils.h  weathertoolpluginwidget.cpp  weathertoolpluginwidget.h
websearch/: CMakeLists.txt
wikipedia/: CMakeLists.txt  Messages.sh  textautogeneratetext_wikipediatoolplugin.json  weathertoolplugin.h  weathertoolplugindialog.cpp  weathertoolplugindialog.h  weathertoolpluginjob.h  wikipediatoolplugin.cpp  wikipediatoolplugin.h  wikipediatoolplugindialog.cpp  wikipediatoolplugindialog.h  wikipediatoolpluginjob.cpp  wikipediatoolpluginjob.h  wikipediatoolpluginwidget.cpp  wikipediatoolpluginwidget.h  wikipediatoolutils.cpp  wikipediatoolutils.h
